--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url = jdbc:postgresql://localhost:5431/enterprise
+spring.datasource.url = jdbc:postgresql://localhost:5431/postgres
 
-spring.datasource.name=postgres
+spring.datasource.username=postgres
 
 spring.datasource.password=postgres
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
