--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-
-spring.datasource.url = jdbc:postgresql://localhost:5431/postgres
-
+spring.datasource.url=jdbc:postgresql://localhost:5431/postgres
 spring.datasource.username=postgres
-
 spring.datasource.password=postgres
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.continue-on-error = true
 spring.jpa.show-sql=true
