--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,15 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=embedded
-spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.continue-on-error = true
 spring.jpa.show-sql=true
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=steven140602@gmail.com
+spring.mail.password=uxxsceeimcuxrohc
+spring.mail.properties.mail.smtp.auth= true
+spring.mail.properties.mail.smtp.starttls.enable= true
