--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=embedded
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error = true
 spring.jpa.show-sql=true
 
