--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.continue-on-error = true
 spring.jpa.show-sql=true
-
+spring.task.scheduling.pool.size=3
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port=587
