--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://dpg-cgdd6el269v52g6p0it0-a.singapore-postgres.render.com:5432/backend_enterprise
+spring.datasource.url=singapore-postgres.render.com
 spring.datasource.username=backend_enterprise_user
 spring.datasource.password=K4l3gAl1MziHZTOxNtMY1pk9yL15vGOq
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
